# bevy-test-0.8

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/bevy_fnord/: Cargo.toml
crates/blast-core/: Cargo.toml
crates/blast-core/src/: app.rs  main.rs
crates/blast-core/src/plugins/: game.rs  mod.rs
crates/blast-core/src/plugins/mech/: mod.rs  systems.rs
crates/blast-core/src/scenes/: constraints.rs
crates/debug-lines-ex/: Cargo.toml
crates/debug-lines-ex/src/: lib.rs
crates/forces/: Cargo.toml
crates/forces/src/: kinematic_constraint.rs  kinematic_force.rs  lib.rs
crates/forces/src/force/: axial.rs  constant.rs  damping.rs  displacement.rs  foreign_constant.rs  length.rs  look_at.rs  max_projection.rs  mod.rs  multiply.rs  planar.rs
crates/forces/src/force/rapier/: depenetration.rs  gravity.rs  mod.rs  raycast.rs
crates/forces/src/integrators/: euler.rs  mod.rs  verlet.rs
crates/godris/: Cargo.toml
crates/godris/src/: main.rs  prelude.rs
crates/godris/src/app/: mod.rs
crates/godris/src/app/game/: bag_randomizer.rs  ghost_piece.rs  lock_timer.rs  mod.rs
crates/godris/src/app/game/autorepeat/: autorepeat_start.rs  autorepeat_stop.rs  delayed_auto_repeat.rs  mod.rs  set_autorepeat_tick_rate.rs
crates/godris/src/app/game/board/: cell.rs  mod.rs  model_instance.rs  plugin.rs  position.rs  voxel.rs
crates/godris/src/app/game/board/compute_instances/: board_buffer.rs  compute_instances.wgsl  compute_jobs.rs  mod.rs  node.rs  pipeline.rs  plugin.rs
crates/godris/src/app/game/board/grid_move/: mod.rs  push_pending_grid_moves.rs
crates/godris/src/app/game/board/material/: board_instance_bundle.rs  board_material.rs  board_mesh_instance.rs  mod.rs
crates/godris/src/app/game/camera/: camera_focus.rs  camera_zoom.rs  lerp_camera_projection.rs  mod.rs  orbit_camera.rs  plugin.rs
crates/godris/src/app/game/input/: input_float.rs  input_reader.rs  mod.rs
crates/godris/src/app/game/input/input_controller/: analog.rs  camera_focus.rs  camera_pitch.rs  camera_projection.rs  camera_yaw.rs  camera_zoom.rs  digital.rs  gravity.rs  hard_drop.rs  mod.rs
crates/godris/src/app/game/tests/: indirect_rendering.rs  mod.rs  remove_model.rs
crates/legend-of-r/: .gitignore  Cargo.toml  DESIGN.rs  TODO.rs  data-design.sc
crates/legend-of-r/src/: body.rs  collider.rs  debug_dump.rs  egui_diagnostics.rs  gltf_entity.rs  gltf_json.rs  hierarchy.rs  main.rs  mesh_2d.rs  prelude.rs  scene.rs  user_interface.rs
crates/legend-of-r/src/animation/: dynamic_animation.rs  float_ord_64.rs  mod.rs  timeline.rs  timeline_input.rs
crates/legend-of-r/src/animation/adapters/: after.rs  animate_component_fields.rs  animate_components.rs  animation.rs  before.rs  curve.rs  dilate.rs  disable.rs  discretize.rs  evaluate.rs  filter.rs  flatten.rs  interpolate.rs  mod.rs  multiply.rs  offset.rs  repeat.rs  sequence.rs  time_source.rs  try_animate_component_fields.rs  try_animate_components.rs  try_replace_components.rs
crates/legend-of-r/src/animation/animations/: axial_function.rs  discrete.rs  entity_component.rs  entity_component_field.rs  from_function.rs  mod.rs
crates/legend-of-r/src/collision/: contact_depenetration.rs  mod.rs  shapecast_depenetration.rs
crates/legend-of-r/src/games/: mod.rs
crates/legend-of-r/src/games/legend_of_r/: force.rs  mod.rs
crates/legend-of-r/src/games/shrike/: mod.rs
crates/legend-of-r/src/games/test/: mod.rs
crates/legend-of-r/src/integration/: mod.rs  reflect_boolean.rs  reflect_bundle.rs  reflect_float.rs  reflect_signed_integer.rs  reflect_string.rs  reflect_unsigned_integer.rs
crates/legend-of-r/src/iterator/: interval.rs  mod.rs  offset.rs  partition_iterator.rs
crates/legend-of-r/src/movement/: linear_move.rs  linear_move_to.rs  mod.rs
crates/legend-of-r/src/shmup/: archive.rs  background.rs  camera.rs  collision_group.rs  damage.rs  enemy.rs  entity_pool.rs  lives.rs  mod.rs  plane_collider.rs  player_input.rs  playfield.rs  shift_speed.rs  ship.rs  vulcan.rs
crates/legend-of-r/src/util/: component_bundle.rs  delayed_input.rs  depth_material.rs  mod.rs  reciprocal.rs  sign.rs
crates/rapier-ex/: Cargo.toml
crates/rapier-ex/src/: debug_colors.rs  lib.rs
crates/rapier-ex/src/fixed_timestep/: mod.rs
crates/rapier-ex/src/interpolation/: mod.rs  systems.rs
(+96 files in other folders)
