[workspace]
resolver = "2"
members = [
    "crates/legend-of-r"
]
default-members = ["crates/legend-of-r"]

# Fast-compile config for crates in this workspace
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 8
lto = false
incremental = true

# Use opt level 3 for dependencies not part of this workspace
[profile.dev.package."*"]
opt-level = 3
