[package]
name = "godris"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_mod_debugdump = "0.5.0"
bevy_prototype_debug_lines = { version = "0.8.1" , features = ["3d"] }
bevy-inspector-egui = "0.12.1"
anyhow = "1.0.58"
rand = "0.8.5"
ron = "0.8.0"
bytemuck = "1.10.0"
lerp = "0.4"

serde = { version = "1.0.138", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
glam = { version = "0.21.2", features = ["glam-assert"] }
bevy = { version = "0.8.0", default_features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "x11",
    "wayland",
    # Remove for release builds
    #"dynamic",
]}

bevy_fnord = { path = "../bevy_fnord" }
bevy_instancing = { git = "https://github.com/Shfty/bevy_instancing", branch = "0.7" }
ecs-ex = { path = "../ecs-ex" }
hierarchy-ex = { path = "../hierarchy-ex" }
result-system = { path = "../result-system" }
strude = { path = "../strude" }
