[package]
name = "legend-of-r"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_mod_debugdump = "0.5.0"
anyhow = "1.0.58"
bevy-inspector-egui = "0.13.0"
bevy_rapier2d = { version = "0.16.1", features = ["serde-serialize"] }
bevy_egui = "0.16.0"
bevy_framepace = "0.7.0"
bitflags = "1.3.2"
lerp = "0.4.0"
rand = "0.8.5"
parry3d = "0.9.0"
parking_lot = "0.12.1"
smallvec = "1.10.0"

json = "0.12.4"
serde = "1.0.145"
serde_json = { version = "1.0.86", features = ["preserve_order"] }
ron = "0.8.0"
indexmap = { version = "1.9.1", features = ["serde"] }

bevy = { version = "0.8.1", default_features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    #"x11",
    "wayland",
    "filesystem_watcher",
] }
